# llms-learning

./: .gitignore  embed_classify.ipynb  requirements.txt  text_classify.ipynb
build_llm_from_scratch/: 01.ipynb  02_text_to_token_vector.ipynb  03_attention.ipynb  04_implement_gpt.ipynb  GPT.py  GPTDataSet.py  README.md  SelfAttention.py
llm_hands_on/: 04_text_classify_with_generation_model.ipynb  04_text_classify_with_represent_model.ipynb  06_prompt_engineering.ipynb  09_multimodal_llm.ipynb  README.md  pyproject.toml  uv.toml
