[project]
name = "llm-hands-on"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
# uv pip install torch torchvision -f https://mirrors.aliyun.com/pytorch-wheels/cu118
dependencies = [
    "bertopic>=0.17.4",
    "datamapplot>=0.6.4",
    "datasets>=4.5.0",
    "hdbscan>=0.8.41",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.8",
    "nbformat",
    "openai>=2.15.0",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.2.0",
    "torch==2.7.1",
    "torchaudio==2.7.1",
    "torchvision==0.22.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.6",
    "umap-learn==0.5.11",
    "widgetsnbextension>=4.0.15",
]
